samples/_failures_safe/1761547904_e4075f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a0a2e125.c: In function ‘main’:
./samples/SAFE/__tmp_a0a2e125.c:177:22: error: ‘EVENT’ undeclared (first use in this function)
  177 |         if (event == EVENT
      |                      ^~~~~
./samples/SAFE/__tmp_a0a2e125.c:177:22: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_a0a2e125.c:177:27: error: expected ‘)’ at end of input
  177 |         if (event == EVENT
      |            ~              ^
      |                           )
./samples/SAFE/__tmp_a0a2e125.c:177:9: error: expected declaration or statement at end of input
  177 |         if (event == EVENT
      |         ^~
./samples/SAFE/__tmp_a0a2e125.c:177:9: error: expected declaration or statement at end of input
